  * A few LIBXC glitches
  * Fermi energy incorrectly written to xml file in 'bands' calculation
    (did not affect results, just Fermi energy position in band plotting)
    Also: Fermi energy always written to xml file, also for insulators
  * Phonon code in the noncolinear case with magnetization ("domag" case)
    now works properly - courtesy Andrea Urru and Andrea Dal Corso.

Incompatible changes in dev branch:
  * Conversion from 1D FFT real-space index to 3D positions moved into a
    small routine for all cases where such conversion is used
  * CP: atomic positions are now in array tau(1:3,1:nat), information on the
    type of atom is in array ityp(:). The logic is now the same as for all
    other codes and there is no need to re-order atoms or to put ultrasoft
    pseudopotentials first, non-conserving second.
  * Calls to LAXlib routines changed: module to be included replaced by file
    'laxlib.fh', descriptors replaced by integer values
  * Interpolation table for Q(G) is in a.u. and no longer in 2pi/a units

New in 6.5 branch:
  * For non-local functionals of the vdW-DF and rVV10 families the kernel is
    now calculated on-the-fly rather than read from file. Thus, the kernel
    files vdW_kernel_table and rVV10_kernel_table are no longer needed for
    calculations and the kernel generation programs generate_vdW_kernel_table.x
    and generate_rVV10_kernel_table.x have been removed. The on-the-fly vdW-DF
    kernel calculation does not take long, e.g. ~100 seconds on a single Intel
    Xeon 2.20GHz core and ~12 seconds on 8 cores (Intel 2018 compilers); the
    rVV10 kernel computes in seconds. Detailed information is available in the
    git log commit notes. This work was performed by T. Thonhauser and is
    supported by NSF Grant No. 1712425.
  * turbo_eels code of TDDFPT module now works with ultrasoft pseudopotentials
    and spin-orbit coupling together (Oleksandr Motornyi, Andrea Dal Corso,