@@ -14,7 +14,9 @@ Fixed in dev branch:
     Also: Fermi energy always written to xml file, also for insulators
   * Phonon code in the noncolinear case with magnetization ("domag" case)
     now works properly - courtesy Andrea Urru and Andrea Dal Corso.
-
+  * Incorrect forces, and slightly inconsistent atomic positions, were
+    written to xml file for structural optimization and molecular dynamics
+ 
 Incompatible changes in dev branch:
   * Conversion from 1D FFT real-space index to 3D positions moved into a
     small routine for all cases where such conversion is used
